Refactor Permission Checker filter by Sync Strategy implementation ♻️